依赖的版本号加上^

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "elf build"
   },
   "dependencies": {
-    "swiper": "3.4.0",
-    "zepto": "1.2.0",
-    "preloader.js": "1.0.0"
+    "swiper": "^3.4.0",
+    "zepto": "^1.2.0",
+    "preloader.js": "^1.0.0"
   }
 }
